added the search logic

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,6 +93,10 @@ a {
 
 /* styles */
 
+.app {
+  position: relative;
+}
+
 .navbar {
   display: flex;
   flex-direction: column;
@@ -264,4 +268,28 @@ a {
 .btn--submit {
   max-width: 120px;
   font-size: var(--font-size-md);
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  padding: 1rem 0;
+  margin-top: 1rem;
+  background-color: whitesmoke;
+}
+
+.about {
+  max-width: 500px;
+  width: 90vw;
+  margin: 0 auto;
+  margin-top: 5rem;
+  font-size: var(--font-size-base);
+}
+
+.footer__heading {
+  font-size: var(--font-size-sm);
+  text-align: center;
+  text-transform: capitalize;
+  font-family: var(--heading-font);
+  font-weight: bold;
 }
